--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -36,7 +36,7 @@
     <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png" />
     
